finishing decisions commands + update swagger file and models
